fix (2311): fixed issue with extra margin of .alt-message__description when there is no title for the Message

--- a/src/components/typography/Message/message.scss
+++ b/src/components/typography/Message/message.scss
@@ -25,12 +25,15 @@
 }
 
 .alt-message__description {
-  margin-top: 14px;
   @include useFontSize(body);
 
   *:last-child {
     margin-bottom: 0;
   }
+}
+
+.alt-message__title + .alt-message__description {
+  margin-top: 14px;
 }
 
 .alt-message--role-primary {
